# resource-embedder

./: .gitignore  .gitmodules  .travis.yml  Makefile  Makefile.conf.in  Makefile.defaults  NEWS.md  README.md  alire.toml  are.gpr  are.gpr.in  are_config.gpr  are_tests.gpr  are_tests.gpr.in  are_tool.gpr  config.gpr  configure  configure.ac  coverage.sh  dynamo.xml  mkdocs.yml
debian/: are.docs  changelog  control  copyright  rules
docs/: Are_Generator.md  Are_Installer.md  Are_Using.md  Installation.md  Using.md  are.1  are.md  index.md  title.md
examples/ada-bundles/: Makefile  README.md  msg.properties  msg_fr.properties  (+2 more)
regtests/: alire.toml  are-generator-ada2012-tests.adb  are-generator-ada2012-tests.ads  are-generator-c-tests.adb  are-generator-c-tests.ads  are-generator-go-tests.adb  are-generator-go-tests.ads  are-generator-tests.adb  are-generator-tests.ads  are-tests.adb  are-tests.ads  are-testsuite.adb  are-testsuite.ads  are_harness.adb
src/: are-generator-ada2012.adb  are-generator-ada2012.ads  are-generator-c.adb  are-generator-c.ads  are-generator-go.adb  are-generator-go.ads  are-generator-specific_old_options.adb  are-generator-specific_options.adb  are-generator.adb  are-generator.ads  are-installer-bundles.adb  are-installer-bundles.ads  are-installer-concat.adb  are-installer-concat.ads  are-installer-copies.adb  are-installer-copies.ads  are-installer-exec.adb  are-installer-exec.ads  are-installer-merges.adb  are-installer-merges.ads  are-installer.adb  are-installer.ads  are-main.adb  are-utils.adb  are-utils.ads  are.adb  are.ads
(+178 files in other folders)
